--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 body {
   max-width: 1920px;
-  width: 100vw;
+  width: 100%;
   margin: 0 auto;
 }
 
